--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "jm-admin",
+  "name": "onaug6th",
   "version": "1.0.0",
-  "description": "jinmeng 's background",
+  "description": "onaug6th",
   "author": "onaug6th",
   "private": true,
   "scripts": {
