--- a/package.json
+++ b/package.json
@@ -9,13 +9,18 @@
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
+  "repository": "https://github.com/onaug6th/onaug6th",
+  "keywords": [
+    "onaug6th",
+    "blog"
+  ],
   "dependencies": {
-    "vue": "^2.5.17",
-    "vue-router": "^3.0.1",
-    "vuex": "^3.0.1",
     "axios": "0.18.0",
     "nprogress": "0.2.0",
-    "sweetalert": "2.1.0"
+    "sweetalert": "2.1.0",
+    "vue": "^2.5.17",
+    "vue-router": "^3.0.1",
+    "vuex": "^3.0.1"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "^3.0.5",
